--- a/TEMPLATES_DIR/base.html
+++ b/TEMPLATES_DIR/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="steak, restaurant, torr head, food, meals, drinks">
-    <meta name="description" content="Sizzle and steak a restaurant in torr head">
+    <meta name="keywords" content="steak, restaurant, food,  Breakfast, Lunch, dinner, sides drinks, Event, Table, Booking">
+    <meta name="description" content="African  estaurant in Bremen, Germany Europ">
     {% load static %}
     {% block css %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
