--- a/TEMPLATES_DIR/base.html
+++ b/TEMPLATES_DIR/base.html
@@ -15,6 +15,8 @@
     
     <!-- Import css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
+
     {% endblock %}
     <!-- Javascript files -->
     {% block postload_js %}
@@ -44,9 +46,10 @@
     </script>
     {% endblock %}
 
-    <!-- Your custom JavaScript files -->
+    <!-- Your custom JavaScript files 
     <script src="{% static 'menu/js/script.js' %}"></script>
     <script src="{% static 'menu/js/order.js' %}"></script>
+    -->
 </body>
 
 </html>
