--- a/TEMPLATES_DIR/403.html
+++ b/TEMPLATES_DIR/403.html
@@ -6,6 +6,6 @@
     <h1>403 Forbidden</h1>
     <p>You are not authorised to perform this action!</p>
 
-    <a href="{% url 'home' %}" class="btn button-style">Home</a>
+    <a href="{% url 'home:home' %}" class="btn-success">Home</a>
 </div>
 {% endblock %}
