--- a/TEMPLATES_DIR/base.html
+++ b/TEMPLATES_DIR/base.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="steak, restaurant, food,  Breakfast, Lunch, dinner, sides drinks, Event, Table, Booking">
-    <meta name="description" content="African  estaurant in Bremen, Germany Europ">
+    <meta name="keywords" content="steak, restaurant, food,  Breakfast, Lunch, dinner, sides, drinks, Event, Table, Booking">
+    <meta name="description" content="African  Restaurant in Bremen, Germany Europ">
     {% load static %}
     {% block css %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
