Add and edit template for page_not _found

--- a/TEMPLATES_DIR/base.html
+++ b/TEMPLATES_DIR/base.html
@@ -46,10 +46,9 @@
     </script>
     {% endblock %}
 
-    <!-- Your custom JavaScript files 
-    <script src="{% static 'menu/js/script.js' %}"></script>
-    <script src="{% static 'menu/js/order.js' %}"></script>
-    -->
+    <!-- Your custom JavaScript files -->
+    <script src="{% static 'js/script.js' %}"></script>
+   
 </body>
 
 </html>
