Re-style the index.html

--- a/TEMPLATES_DIR/base.html
+++ b/TEMPLATES_DIR/base.html
@@ -22,6 +22,8 @@
     {% block postload_js %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7rsgWaoBl0cA1WdL9yOb2273KfSxeDz8" defer></script> -->
+
     {% endblock %}
 </head>
 
