--- a/TEMPLATES_DIR/base.html
+++ b/TEMPLATES_DIR/base.html
@@ -39,6 +39,24 @@
     {% endif %}
     {% endblock %}
 
+    <div class="container">
+        <div class="row">
+            <div class="col-m8 offset-md-2">
+                {% for message in messages %}
+                <div class="alert {{messages.tags}} alert-dismissible fade show" id="msg"
+                roles="alert">
+                {{message | safe}}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close">
+                </button>
+            </div>
+
+                {% endfor %}
+
+
+            </div>
+        </div>
+    </div>
+
     <main>
         <div class="container">
             {% block content %}
@@ -49,6 +67,15 @@
 
     <!-- Footer -->
     {% include 'includes/footer.html' %}
+
+    <script>
+        setTimeout(function() {
+            let message = document.getElementById("msg");
+            let alert = new bootstrap.Alert(message);
+            alert.close();
+        }, 3000);
+    </script>
+    
 
     {% block extra_js %}
     <script>
