Add template for creating menuitem, logic and style

--- a/TEMPLATES_DIR/base.html
+++ b/TEMPLATES_DIR/base.html
@@ -59,6 +59,11 @@
             <!-- Content Goes here -->
             {% endblock content %}
         </div>
+
+        <div class="form-section">
+            {% block form %}
+            {% endblock %}
+        </div>
     </main>
 
     <!-- Footer -->
